* Mockito service tests finished * Added javadoc * Cleanup